[package]
name = "pushparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compact_str = "0.7.1"
indicatif = "0.17.7"
simd-json = "0.13.8"
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread", "sync"] }
walkdir = "2.4.0"
zstd = "0.13.0"
